feat:js de emplado casi completo

--- a/WebInmobiliaria/Paginas/Empleado/GestionEmpleado.html
+++ b/WebInmobiliaria/Paginas/Empleado/GestionEmpleado.html
@@ -59,7 +59,7 @@
                                     </div>
                                     <div class="col-md-2">
                                         <div class="form-group">
-                                            <label for="cboSede">Sede</label>
+                                            <label for="cboSede">SEDE</label>
                                             <select id="cboSede" class="form-control select2" style="width: 100%;">
                                                 <option selected="selected" value="0">Seleccione una sede</option>
                                             </select>
@@ -134,7 +134,7 @@
                                     </div>
                                     <div class="card-body">
                                         <div class="row">
-                                            
+
                                             <div class="col-md-4">
                                                 <div class="form-group">
                                                     <label for="txtUsuario">USUARIO</label>
@@ -184,24 +184,24 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="col-md-12">
-                                        <table id="tblClientes" class="table table-bordered table-striped">
+                                    <div class="col-md-4">
+                                        <table id="tblEmpleados" class="table table-bordered table-striped">
                                             <thead>
                                                 <tr>
-                                                    <th>Edit</th>
-                                                    <th>Cod Empleado</th>
-                                                    <th>Tipo Documento</th>
-                                                    <th>Nro.Documento</th>
-                                                    <th>Activo</th>
-                                                    <th>Sede</th>
-                                                    <th>Nombre</th>
-                                                    <th>Apellido</th>
-                                                    <th>Genero</th>
-                                                    <th>Email</th>
-                                                    <th>Tipo telefono</th>
-                                                    <th>Telefono</th>
-                                                    <th>Fecha Contratacion</th>
-                                                    <th>Tipo empleado</th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
                                                 </tr>
                                             </thead>
                                         </table>
@@ -217,7 +217,7 @@
             </div>
         </div>
     </section>
-
+    <script src="../../Scripts/jquery-3.4.1.min.js"></script>
     <script src="../../Scripts/jquery.min.js"></script>
     <script src="../../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../../Scripts/jquery.dataTables.min.js"></script>
@@ -225,8 +225,6 @@
     <script src="../Scripts/Menu.js"></script>
     <script src="../Scripts/Comunes/CRUD.js"></script>
     <script src="../Scripts/Comunes/Comunes.js"></script>
-    <script src="../../Scripts/jquery-3.4.1.min.js"></script>
-    <script src="../../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/Empleado/Empleado.js"></script>
     <script src="../Scripts/Empleado/MenuEmpleado.js"></script>
 </body>
