feat: add functionality to manage employee actions and create admin panel

--- a/WebInmobiliaria/Paginas/Empleado/GestionEmpleado.html
+++ b/WebInmobiliaria/Paginas/Empleado/GestionEmpleado.html
@@ -163,22 +163,22 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <button id="bntInsertar" class="btn-block btn-lg btn-primary">INSERTAR</button>
+                                            <button id="bntInsertar" class="btn-block btn-lg btn-primary" onclick="insertarEmpleado()">INSERTAR</button>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <button id="btnActualizar" class="btn-block btn-lg btn-primary">ACTUALIZAR</button>
+                                            <button id="btnActualizar" class="btn-block btn-lg btn-primary" onclick="actualizarEmpleado()">ACTUALIZAR</button>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <button id="btnEliminar" class="btn-block btn-lg btn-primary">ELIMINAR</button>
+                                            <button id="btnEliminar" class="btn-block btn-lg btn-primary" onclick="eliminarEmpleado()">ELIMINAR</button>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <button id="btnConsultar" class="btn-block btn-lg btn-primary">CONSULTAR</button>
+                                            <button id="btnConsultar" class="btn-block btn-lg btn-primary" onclick="ConsultarEmpleado()">CONSULTAR</button>
                                         </div>
                                     </div>
                                 </div>
