feat:hice unos cambio en fron de inmibiliaria

--- a/WebInmobiliaria/Paginas/Empleado/GestionVisita.html
+++ b/WebInmobiliaria/Paginas/Empleado/GestionVisita.html
@@ -132,21 +132,21 @@
 
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <table id="tblClientes" class="table table-bordered table-striped">
+                                        <table id="tblVisita" class="table table-bordered table-striped">
                                             <thead>
                                                 <tr>
-                                                    <th>Edit</th>
-                                                    <th>Id Visita</th>
-                                                    <th>Id Propiedad</th>
-                                                    <th>Nombre</th>
-                                                    <th>Apellido</th>
-                                                    <th>tipo Documento</th>
-                                                    <th>Nro.Documento</th>
-                                                    <th>Dirección</th>
-                                                    <th>Telefono</th>
-                                                    <th>Fecha Visita</th>
-                                                    <th>Email</th>
-                                                    <th>Descripcion</th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
+                                                    <th></th>
                                                 </tr>
                                             </thead>
                                         </table>
@@ -170,9 +170,9 @@
     <script src="../Scripts/Menu.js"></script>
     <script src="../Scripts/Comunes/CRUD.js"></script>
     <script src="../Scripts/Comunes/Comunes.js"></script>
-    <script src="../Scripts/Clientes.js"></script>
     <script src="../../Scripts/jquery-3.4.1.min.js"></script>
     <script src="../../Scripts/bootstrap.bundle.min.js"></script>
+    <script src="../Scripts/Empleado/GestionVisita.js"></script>
 
     <script src="../Scripts/Empleado/MenuEmpleado.js"></script>
 </body>
