--- a/WebInmobiliaria/Paginas/Empleado/GestionInmuebles.html
+++ b/WebInmobiliaria/Paginas/Empleado/GestionInmuebles.html
@@ -232,7 +232,7 @@
 
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <table id="tblClientes" class="table table-bordered table-striped">
+                                        <table id="tblInmueble" class="table table-bordered table-striped">
                                             <thead>
                                                 <tr>
                                                     <th>Edit</th>
@@ -282,7 +282,6 @@
     <script src="../Scripts/Menu.js"></script>
     <script src="../Scripts/Comunes/CRUD.js"></script>
     <script src="../Scripts/Comunes/Comunes.js"></script>
-    <script src="../Scripts/Clientes.js"></script>
     <script src="../../Scripts/jquery-3.4.1.min.js"></script>
     <script src="../../Scripts/bootstrap.bundle.min.js"></script>
 
