feat:pongo avance del js de gestion de visita

--- a/WebInmobiliaria/Paginas/Empleado/GestionVisita.html
+++ b/WebInmobiliaria/Paginas/Empleado/GestionVisita.html
@@ -71,10 +71,8 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <label for="cboTipoTelefono">TIPO TELEFONO</label>
-                                            <select id="cboTipoTelefono" class="form-control select2" style="width: 100%;" readonly>
-                                                <option selected="selected" value="0">Seleccione un tipo de telefono</option>
-                                            </select>
+                                            <label for="txtTipoTelefono">TIPO TELEFONO</label>
+                                            <input type="text" class="form-control" id="txtTipoTelefono" placeholder="Tipo de Telefono" readonly>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
@@ -135,6 +133,8 @@
                                         <table id="tblVisita" class="table table-bordered table-striped">
                                             <thead>
                                                 <tr>
+                                                    <th></th>
+                                                    <th></th>
                                                     <th></th>
                                                     <th></th>
                                                     <th></th>
