--- a/WebInmobiliaria/Paginas/Empleado/GestionVisita.html
+++ b/WebInmobiliaria/Paginas/Empleado/GestionVisita.html
@@ -33,6 +33,12 @@
                                     <!-- 1ra linea -->
                                     <div class="col-md-3">
                                         <div class="form-group">
+                                            <label for="txtCodigoCliente">CODIGO CLIENTE</label>
+                                            <input type="text" class="form-control" id="txtCodigoCliente" placeholder="Codigo del cliente"readonly>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
                                             <label for="txtNroDocumento">NRO.DOCUMENTO</label>
                                             <input type="text" class="form-control" id="txtNroDocumento" placeholder="Nro. de documento del cliente">
                                         </div>
@@ -40,7 +46,7 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <label for="txtIdVisita">ID VISITA</label>
-                                            <input type="text" class="form-control" id="txtIdVisita" placeholder="ID visita">
+                                            <input type="text" class="form-control" id="txtIdVisita" placeholder="ID visita"readonly>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
@@ -86,7 +92,7 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <label for="txtFechaVisita">FECHA_VISITA</label>
-                                            <input type="date" class="form-control" id="txtFechaVisita" placeholder="Valor Unitario">
+                                            <input type="date" class="form-control" id="txtFechaVisita" placeholder="Valor Unitario"readonly>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
@@ -106,11 +112,7 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <button id="bntInsertar" class="btn-block btn-lg btn-primary">INSERTAR</button>
-                                        </div>
-                                    </div>
+                                  
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <button id="btnActualizar" class="btn-block btn-lg btn-primary">ACTUALIZAR</button>
@@ -146,7 +148,7 @@
                                                     <th></th>
                                                     <th></th>
                                                     <th></th>
-                                                    <th></th>
+                                                   
                                                 </tr>
                                             </thead>
                                         </table>
@@ -163,6 +165,7 @@
         </div>
     </section>
 
+    <script src="../../Scripts/jquery-3.4.1.min.js"></script>
     <script src="../../Scripts/jquery.min.js"></script>
     <script src="../../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../../Scripts/jquery.dataTables.min.js"></script>
@@ -170,11 +173,10 @@
     <script src="../Scripts/Menu.js"></script>
     <script src="../Scripts/Comunes/CRUD.js"></script>
     <script src="../Scripts/Comunes/Comunes.js"></script>
-    <script src="../../Scripts/jquery-3.4.1.min.js"></script>
     <script src="../../Scripts/bootstrap.bundle.min.js"></script>
-    <script src="../Scripts/Empleado/GestionVisita.js"></script>
 
     <script src="../Scripts/Empleado/MenuEmpleado.js"></script>
+    <script src="../Scripts/Empleado/GestionVisita.js"></script>
 </body>
 
 </html>
