--- a/WebInmobiliaria/Paginas/Empleado/MenuEmpleado.html
+++ b/WebInmobiliaria/Paginas/Empleado/MenuEmpleado.html
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" data-toggle="collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="dropdown-item" href="IndexEmpleado.html">Inicio</a>
+                <a class="dropdown-item" href="Index.html">Inicio</a>
             </li>
 
             <li class="nav-item dropdown">
