--- a/WebInmobiliaria/Paginas/Cliente/InmueblesCatalogo.html
+++ b/WebInmobiliaria/Paginas/Cliente/InmueblesCatalogo.html
@@ -23,10 +23,6 @@
                 <div class="mb-3">
                     <label for="tipoInmueble" class="form-label">Tipo de Inmueble</label>
                     <select id="tipoInmueble" class="form-select">
-                        <option value="">Todos</option>
-                        <option value="Casa">Casa</option>
-                        <option value="Apartamento">Apartamento</option>
-                        <option value="Oficina">Oficina</option>
                     </select>
                 </div>
 
@@ -47,6 +43,8 @@
     </div>
     <script src="../../Scripts/jquery-3.4.1.min.js"></script>
     <script src="../../Scripts/bootstrap.bundle.min.js"></script>
+    <script src="../Scripts/Comunes/Comunes.js"></script>
+    <script src="../Scripts/Comunes/CRUD.js"></script>
     <script src="../Scripts/Cliente/InmueblesCatalogo.js"></script>
 </body>
 </html>
